PROD-1893 Fix(Accordion) : Added css rule to break the accordion section title

--- a/src/styles/components/_go-accordion.scss
+++ b/src/styles/components/_go-accordion.scss
@@ -2,4 +2,8 @@
   .go-accordion__item  + .go-accordion__item {
     margin-top: $padding-base;
   }
+
+  .go-header__title * {
+    word-break: break-word;
+  }
 }
